kubernetes-files/demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: api-property.zodiai.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend-service
                port:
                  number: 80
